<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">YSports</string>
    <string name="file_provider_authority" translatable="false">ysports.app.file_provider</string>

    <!-- Notification -->
    <string name="default_notification_channel_id">default_channel</string>
    <string name="default_notification_channel_name">Default</string>
    <string name="default_notification_channel_description">Default notifications</string>
    <string name="player_notification_channel_id">player_channel</string>
    <string name="player_notification_channel_name">Player</string>
    <string name="player_notification_channel_description">Player notifications</string>

    <!-- Exoplayer strings -->
    <string name="track_selection_title">Select tracks</string>
    <string name="unexpected_intent_action">Unexpected intent action: <xliff:g id="action">%1$s</xliff:g></string>
    <string name="error_cleartext_not_permitted">Cleartext HTTP traffic not permitted. See https://exoplayer.dev/issues/cleartext-not-permitted</string>
    <string name="error_generic">Playback failed</string>
    <string name="error_drm_unsupported_before_api_18">DRM content not supported on API levels below 18</string>
    <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>
    <string name="error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="error_no_secure_decoder">This device does not provide a secure decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="error_querying_decoders">Unable to query device decoders</string>
    <string name="error_instantiating_decoder">Unable to instantiate decoder <xliff:g id="decoder_name">%1$s</xliff:g></string>
    <string name="error_unsupported_video">Media includes video tracks, but none are playable by this device</string>
    <string name="error_unsupported_audio">Media includes audio tracks, but none are playable by this device</string>
    <string name="storage_permission_denied">Permission to access storage was denied</string>
    <string name="download_start_error">Failed to start download</string>
    <string name="download_start_error_offline_license">Failed to obtain offline license</string>
    <string name="download_live_unsupported">This demo app does not support downloading live content</string>

    <!-- Error strings -->
    <string name="error_default">An error occurred</string>
    <string name="error_no_network">No internet connection. Make sure that Wi-Fi or mobile data is turned on, and then try again.</string>
    <string name="error_empty_response">Empty response found</string>
    <string name="error_failed_to_load_content">We\'re unable to load content. Please try again</string>
    <string name="error_fdb_on_cancelled">Failed to connect with database</string>
    <string name="error_retrofit_response">No response found</string>
    <string name="error_no_matches_today">No matches today</string>
    <string name="error_no_matches">No matches found</string>
    <string name="error_no_leagues">No leagues found</string>
    <string name="error_initialize_youtube_player">Failed to initialize player</string>
    <string name="error_empty_url">Empty URL</string>
    <string name="error_no_list_found">Something went wrong, please check your internet connection and try again</string>
    <string name="error_url_load_fail">Failed to load URL</string>
    <string name="error_unsupported_url">Unsupported URL</string>
    <string name="error_no_torrent_client">Download a torrent client and Try again!</string>
    <string name="error_disabled_location_service">Please enable location services in settings</string>
    <string name="error_ssl_title">SSL Certificate Error</string>
    <string name="error_ssl">Certificate error.</string>
    <string name="error_ssl_untrusted">The certificate authority is not trusted.</string>
    <string name="error_ssl_expired">The certificate has been expired.</string>
    <string name="error_ssl_id_mismatch">The certificate hostname mismatch.</string>
    <string name="error_ssl_not_yet_valid">The certificate is not yet valid.</string>
    <string name="error_ssl_date_invalid">The certificate date is invalid</string>
    <string name="error_download_failed">Download failed</string>
    <string name="error_list_load_failed">One or more lists failed to load</string>

    <!-- Navigation drawer -->
    <string name="title_home_subheader">Home</string>
    <string name="title_labels_subheader">More</string>
    <string name="title_network_stream">Network stream</string>
    <string name="title_settings">Settings</string>
    <string name="title_share">Share app</string>
    <string name="title_matches">Matches</string>
    <string name="title_leagues">Leagues</string>
    <string name="title_news">News</string>
    <string name="title_more">More</string>

    <!-- Navigation Rail, Bottom Navigation -->
    <string name="label_matches_destination">Matches</string>
    <string name="label_leagues_destination">Leagues</string>
    <string name="label_news_destination">News</string>
    <string name="label_more_destination">More</string>

    <!-- Activity labels -->
    <string name="label_activity_main">YSports</string>
    <string name="label_activity_player">Player</string>
    <string name="label_activity_player_chooser">Open</string>
    <string name="label_activity_settings">Settings</string>

    <!-- Preference screen -->
    <string name="title_category_general">General</string>
    <string name="title_category_about">About</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_theme">Theme</string>
    <string name="title_dynamic_color">Dynamic color</string>
    <string name="title_clear_cache">Clear cache</string>
    <string name="title_about">About YSports</string>
    <string name="title_oss">Open-source licenses</string>
    <string name="title_version">YSports version</string>
    <string name="summary_notifications">Manage notification settings</string>
    <string name="summary_theme_system_default">Turn on dark theme when your devices dark theme or Battery saver is on</string>
    <string name="summary_theme_light">Light</string>
    <string name="summary_theme_dark">Dark</string>
    <string name="summary_dynamic_color">Changes app color dynamically</string>
    <string name="summary_oss">License details for open-source software</string>
    <string name="summary_version">Version: %1$s</string>

    <!-- Toolbar title -->
    <string name="title_activity_settings">Settings</string>

    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="block">Block</string>
    <string name="proceed">Proceed</string>
    <string name="im_in">I\'m in</string>
    <string name="skip">Skip</string>
    <string name="continue_page">Continue</string>
    <string name="search">Search</string>
    <string name="subtitles">Subtitles</string>
    <string name="audio">Audio</string>
    <string name="quality">Quality</string>
    <string name="retry">Retry</string>
    <string name="live_caps">LIVE</string>
    <string name="go_live_caps">GO LIVE</string>
    <string name="_00_00">00:00</string>
    <string name="ysports_caps">YSPORTS</string>
    <string name="_0">0</string>
    <string name="playback_speed">Playback speed</string>
    <string name="url_404_error">https://ysports.app/assets/web/error_404/index.html</string>
    <string name="url_about">https://ysportsapp.blogspot.com/p/about-ysports.html</string>
    <string name="url_download_app">https://ysports.page.link/download</string>
    <string name="url_share_app">https://ysports.page.link/share</string>
    <string name="dynamic_link_url_prefix">https://ysports.page.link</string>
    <string name="previous">Previous</string>
    <string name="today">Today</string>
    <string name="upcoming">Upcoming</string>
    <string name="network_url">Network URL</string>
    <string name="share">Share</string>
    <string name="refresh">Refresh</string>
    <string name="copy_link">Copy Link</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="reload">Reload</string>
    <string name="details">Details</string>
    <string name="browser_error_title">Check your internet connection</string>
    <string name="browser_error_description">Check any cables and reboot any routers, modems or other network devices you may be using.</string>
    <string name="allow">Allow</string>
    <string name="download">Download</string>
    <string name="play">Play</string>
    <string name="unknown">Unknown</string>
    <string name="web_user_agent" translatable="false">Mozilla/5.0 (Linux; Android <xliff:g id="build_release">%1$s</xliff:g>; <xliff:g id="build_model">%2$s</xliff:g>) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/104.0.0.0 Mobile Safari/537.36</string>
    <string name="request_message_permission_camera">YSports need camera permission to access camera</string>
    <string name="request_message_permission_mic">YSports need microphone permission to access mic</string>
    <string name="request_message_permission_location">YSports need location permission to access location</string>
    <string name="request_title_allow_permission">Allow permission?</string>
    <string name="warning_cellular_data_usage">Using cellular data now, download will consume traffic</string>
    <string name="warning_unsafe_page_title">Unsafe</string>
    <string name="warning_unsafe_page_message">Unsafe web page detected. Do you want to block it?</string>
    <string name="unsafe_page_blocked">Unsafe web page blocked</string>
    <string name="popup_blocked">Pop-up blocked</string>
    <string name="js_dialog_title">%1$s says</string>
    <string name="request_message_permission_camera_web">YSports need camera permission for this site</string>
    <string name="request_message_permission_mic_web">YSports need microphone permission for this site</string>
    <string name="request_message_permission_location_web">YSports need location permission for this site</string>
    <string name="access_message_camera_web">%1$s wants to use your camera</string>
    <string name="access_message_mic_web">%1$s wants to use your microphone</string>
    <string name="access_message_location_web">%1$s wants to use your devices location</string>
    <string name="downloading_file">Downloading file</string>
    <string name="download_complete">Download complete</string>
    <string name="downloaded_successfully">Downloaded successfully.</string>
    <string name="request_message_permission_clipboard">Allow YSports to access items in the clipboard to add copied URLs automatically?</string>
    <string name="cache_cleared">Cache cleared</string>
    <string name="share_app_using">Share app using</string>
    <string name="add_to_calendar">Add to calendar</string>
    <string name="video_zoom">Video zoom</string>
    <string name="stretch">Stretch</string>
    <string name="crop">Crop</string>
    <string name="fixed_height">Fixed height</string>
    <string name="fixed_width">Fixed width</string>
    <string name="fit_to_screen">Fit to screen</string>
    <string name="restart_app_to_apply">Restart app to apply</string>
    <string name="share_link">Share link</string>
    <string name="share_via">Share via</string>
    <string name="link_copied_to_clipboard">Link copied to clipboard</string>
    <string name="text_copied_to_clipboard">Text copied to clipboard</string>
    <string name="positive_10s">10s</string>
    <string name="negative_10s">-10s</string>
</resources>