<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/share"
        android:contentDescription="@string/app_name"
        android:icon="@drawable/ic_baseline_share_24"
        android:title="@string/share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/refresh"
        android:contentDescription="@string/app_name"
        android:title="@string/refresh"
        app:showAsAction="never" />
    <item
        android:id="@+id/copy"
        android:contentDescription="@string/app_name"
        android:title="@string/copy_link"
        app:showAsAction="never" />
    <item
        android:id="@+id/open"
        android:contentDescription="@string/app_name"
        android:title="@string/open_in_browser"
        app:showAsAction="never" />
</menu>