<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerActivity">
    <com.google.android.exoplayer2.ui.StyledPlayerView
        android:id="@+id/player_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:controller_layout_id="@layout/view_player_control"
        app:animation_enabled="false"
        app:show_buffering="always" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|end"
        android:layout_marginEnd="50dp"
        android:alpha="0.5"
        android:text="@string/ysports_caps"
        android:textColor="@color/watermark"
        android:textSize="12sp" />
    <TextView
        android:id="@+id/debug_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:textSize="10sp"
        android:visibility="gone"
        tools:ignore="SmallSp" />

    <ImageButton
        android:id="@+id/exo_unlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_margin="8dp"
        android:src="@drawable/ic_baseline_lock_24"
        android:contentDescription="@string/app_name"
        android:layout_gravity="bottom"
        android:visibility="gone"
        app:tint="@color/white"
        style="@style/ExoMediaButton" />

    <Button
        android:id="@+id/brightness_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/_0"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:icon="@drawable/ic_baseline_brightness_medium_24"
        app:drawableTint="@color/white"
        style="@style/Widget.Material3.Button.Icon"/>
    <Button
        android:id="@+id/volume_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/_0"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:icon="@drawable/ic_baseline_volume_up_24"
        app:drawableTint="@color/white"
        style="@style/Widget.Material3.Button.Icon"/>
</FrameLayout>