<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fixtures.FixturesFragment">
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/chip_group_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:visibility="gone">
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:layout_gravity="center"
            app:singleLine="true"
            app:singleSelection="true"
            app:selectionRequired="true"
            app:checkedChip="@+id/chip_today">
            <com.google.android.material.chip.Chip
                android:id="@+id/chip_previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/previous"
                style="@style/Widget.Material3.Chip.Suggestion.Elevated"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/chip_today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today"
                style="@style/Widget.Material3.Chip.Suggestion.Elevated"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/chip_upcoming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upcoming"
                style="@style/Widget.Material3.Chip.Suggestion.Elevated"/>
        </com.google.android.material.chip.ChipGroup>
    </com.google.android.material.card.MaterialCardView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_fixture"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
            android:padding="10dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/list_item_fixture" />
        <include
            android:id="@+id/error_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            layout="@layout/view_error_state_home"
            android:visibility="gone"/>
        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:indeterminate="true"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
</LinearLayout>