<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/transparent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:paddingVertical="3dp"
        android:background="@drawable/background_modal_bottomsheet"
        android:elevation="3dp">
        <LinearLayout
            android:id="@+id/quality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="?attr/selectableItemBackground"
            android:minHeight="?attr/minTouchTargetSize">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:src="@drawable/ic_baseline_hd_24"
                android:contentDescription="@string/app_name" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingStart="0dp"
                android:paddingEnd="16dp"
                android:maxLines="1"
                android:text="@string/quality"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textColor="@color/onBackground"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/audio_track"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="?attr/selectableItemBackground"
            android:minHeight="?attr/minTouchTargetSize">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:src="@drawable/ic_baseline_audiotrack_24"
                android:contentDescription="@string/app_name" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingStart="0dp"
                android:paddingEnd="16dp"
                android:maxLines="1"
                android:text="@string/audio"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textColor="@color/onBackground"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/subtitles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="?attr/selectableItemBackground"
            android:minHeight="?attr/minTouchTargetSize">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:src="@drawable/ic_baseline_subtitles_24"
                android:contentDescription="@string/app_name" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingStart="0dp"
                android:paddingEnd="16dp"
                android:maxLines="1"
                android:text="@string/subtitles"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textColor="@color/onBackground"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="?attr/selectableItemBackground"
            android:minHeight="?attr/minTouchTargetSize"
            android:visibility="gone">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:src="@drawable/ic_baseline_settings_24"
                android:contentDescription="@string/app_name" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingStart="0dp"
                android:paddingEnd="16dp"
                android:maxLines="1"
                android:text="@string/settings"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textColor="@color/onBackground"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/playback_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="?attr/selectableItemBackground"
            android:minHeight="?attr/minTouchTargetSize">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:src="@drawable/ic_baseline_slow_motion_video_24"
                android:contentDescription="@string/app_name" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingStart="0dp"
                android:paddingEnd="16dp"
                android:maxLines="1"
                android:text="@string/playback_speed"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textColor="@color/onBackground"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>